syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "atomic_badge.proto";

message DisableContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes contract_id = 3;
  int64 fee = 4;
  int64 timestamp = 5;
  google.protobuf.BytesValue fee_asset_id = 6;
  AtomicBadge atomic_badge = 7;
  repeated bytes proofs = 8;
  bytes sender_address = 9;
}